// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders with as correctly 1`] = `"<span data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row"><div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div><!--v-if--></span>"`;

exports[`Separator > renders with avatar correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <div class="font-b24-primary font-normal text-base-500 flex mx-3 whitespace-nowrap"><span class="inline-flex items-center justify-center select-none overflow-hidden rounded-full align-middle bg-base-100 dark:bg-base-900 size-7 text-xs shrink-0"><img role="img" src="https://github.com/benjamincanac.png" width="22" height="22" class="h-full w-full rounded-[inherit] object-cover" style="display: none;"><span class="font-medium text-base-500 dark:text-base-600 truncate"> </span></span></div>
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
</div>"
`;

exports[`Separator > renders with b24ui correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with class correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row-reverse">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with color success correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-green-500 dark:border-green-600 w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with decorative correctly 1`] = `
"<div data-orientation="horizontal" role="none" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <div class="font-b24-primary font-normal text-base-500 flex mx-3 whitespace-nowrap">
    <i-lucide-image class="shrink-0 size-7"></i-lucide-image>
  </div>
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
</div>"
`;

exports[`Separator > renders with label correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <div class="font-b24-primary font-normal text-base-500 flex mx-3 whitespace-nowrap"><span class="text-sm">+1</span></div>
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
</div>"
`;

exports[`Separator > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" aria-orientation="vertical" role="separator" class="flex items-center align-center text-center h-full flex-col">
  <div class="border-base-master/10 dark:border-base-100/20 h-full border-solid border-s"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t-[4px]"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t-[3px]"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t-[2px]"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t-[5px]"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dashed correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-dashed border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dotted correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-dotted border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type solid correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-base-master/10 dark:border-base-100/20 w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;
